--- a/sites/flint/content/docs/guide/tutorial-research-notes.mdx
+++ b/sites/flint/content/docs/guide/tutorial-research-notes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Research Notes"
+title: "Tutorial: Research Notes with Flint"
 ---
 
 Learn how to organize research, connect sources, and produce publications.
@@ -98,9 +98,9 @@ The orthogonality thesis is particularly compelling.
 
 ## Related
 
-- [Concepts/Orthogonality Thesis](/docs/concepts-orthogonality-thesis)
-- [Concepts/Control Problem](/docs/concepts-control-problem)
-- [Sources/Russell 2019 - Human Compatible](/docs/sources-russell-2019-human-compatible)
+- [Concepts/Orthogonality Thesis](/concepts-orthogonality-thesis)
+- [Concepts/Control Problem](/concepts-control-problem)
+- [Sources/Russell 2019 - Human Compatible](/sources-russell-2019-human-compatible)
 ```
 
 ## Step 5: Build Concept Notes
@@ -134,14 +134,14 @@ or less any final goal." — Bostrom
 
 ## Sources
 
-- [Sources/Bostrom 2014 - Superintelligence](/docs/sources-bostrom-2014-superintelligence)
-- [Sources/Armstrong 2015 - Motivated Value Selection](/docs/sources-armstrong-2015-motivated-value-selection)
+- [Sources/Bostrom 2014 - Superintelligence](/sources-bostrom-2014-superintelligence)
+- [Sources/Armstrong 2015 - Motivated Value Selection](/sources-armstrong-2015-motivated-value-selection)
 
 ## Related Concepts
 
-- [Control Problem](/docs/control-problem)
-- [Value Alignment](/docs/value-alignment)
-- [Instrumental Convergence](/docs/instrumental-convergence)
+- [Control Problem](/control-problem)
+- [Value Alignment](/value-alignment)
+- [Instrumental Convergence](/instrumental-convergence)
 ```
 
 ## Step 6: Create Synthesis Notes
@@ -162,7 +162,7 @@ My synthesis of the AI control problem literature.
 
 ## The Core Challenge
 
-Given the [Orthogonality Thesis](/docs/orthogonality-thesis), we cannot assume advanced AI
+Given the [Orthogonality Thesis](/orthogonality-thesis), we cannot assume advanced AI
 will share human values. The control problem asks: how do we
 ensure AI systems remain beneficial as they become more capable?
 
@@ -174,19 +174,19 @@ Making AI systems that accept correction. Challenges include:
 - Incentive to resist shutdown
 - Preserving own goals
 
-See [Concepts/Corrigibility](/docs/concepts-corrigibility) for details.
+See [Concepts/Corrigibility](/concepts-corrigibility) for details.
 
 ### 2. Value Learning
 
 Having AI infer human values through observation.
 
-See [Concepts/Value Learning](/docs/concepts-value-learning) for details.
+See [Concepts/Value Learning](/concepts-value-learning) for details.
 
 ### 3. Constitutional AI
 
 Training with explicit principles. Anthropic's approach.
 
-See [Sources/Bai 2022 - Constitutional AI](/docs/sources-bai-2022-constitutional-ai).
+See [Sources/Bai 2022 - Constitutional AI](/sources-bai-2022-constitutional-ai).
 
 ## Open Questions
 
@@ -196,8 +196,8 @@ See [Sources/Bai 2022 - Constitutional AI](/docs/sources-bai-2022-constitutional
 
 ## Sources
 
-![Sources/Bostrom 2014 - Superintelligence#Key Claims](/docs/sources-bostrom-2014-superintelligence-key-claims)
-![Sources/Russell 2019 - Human Compatible#Central Argument](/docs/sources-russell-2019-human-compatible-central-argument)
+![Sources/Bostrom 2014 - Superintelligence#Key Claims](/sources-bostrom-2014-superintelligence-key-claims)
+![Sources/Russell 2019 - Human Compatible#Central Argument](/sources-russell-2019-human-compatible-central-argument)
 ```
 
 ## Step 7: Add Reference Materials
@@ -216,10 +216,10 @@ Media/
 Reference them in notes:
 
 ```markdown
-See the original argument: ![Media/papers/bostrom-2014-superintelligence-excerpt.pdf](/docs/media-papers-bostrom-2014-superintelligence-excerpt-pdf)
+See the original argument: ![Media/papers/bostrom-2014-superintelligence-excerpt.pdf](/media-papers-bostrom-2014-superintelligence-excerpt-pdf)
 
 Visual overview:
-![Media/diagrams/control-problem-taxonomy.png](/docs/media-diagrams-control-problem-taxonomy-png)
+![Media/diagrams/control-problem-taxonomy.png](/media-diagrams-control-problem-taxonomy-png)
 ```
 
 ## Step 8: Use the Index
@@ -239,26 +239,26 @@ tags:
 ## By Type
 
 ### Sources
-- [Sources/Bostrom 2014 - Superintelligence](/docs/sources-bostrom-2014-superintelligence)
-- [Sources/Russell 2019 - Human Compatible](/docs/sources-russell-2019-human-compatible)
+- [Sources/Bostrom 2014 - Superintelligence](/sources-bostrom-2014-superintelligence)
+- [Sources/Russell 2019 - Human Compatible](/sources-russell-2019-human-compatible)
 
 ### Core Concepts
-- [Concepts/Orthogonality Thesis](/docs/concepts-orthogonality-thesis)
-- [Concepts/Control Problem](/docs/concepts-control-problem)
-- [Concepts/Value Alignment](/docs/concepts-value-alignment)
+- [Concepts/Orthogonality Thesis](/concepts-orthogonality-thesis)
+- [Concepts/Control Problem](/concepts-control-problem)
+- [Concepts/Value Alignment](/concepts-value-alignment)
 
 ### Syntheses
-- [Syntheses/Control Problem Overview](/docs/syntheses-control-problem-overview)
+- [Syntheses/Control Problem Overview](/syntheses-control-problem-overview)
 
 ## By Topic
 
 ### Foundational
-- [Concepts/Orthogonality Thesis](/docs/concepts-orthogonality-thesis)
-- [Concepts/Instrumental Convergence](/docs/concepts-instrumental-convergence)
+- [Concepts/Orthogonality Thesis](/concepts-orthogonality-thesis)
+- [Concepts/Instrumental Convergence](/concepts-instrumental-convergence)
 
 ### Solutions
-- [Concepts/Corrigibility](/docs/concepts-corrigibility)
-- [Concepts/Value Learning](/docs/concepts-value-learning)
+- [Concepts/Corrigibility](/concepts-corrigibility)
+- [Concepts/Value Learning](/concepts-value-learning)
 ```
 
 ## Step 9: Draft Your Paper
@@ -288,17 +288,17 @@ This paper surveys approaches to the AI control problem.
 
 ## 2. The Control Problem
 
-![Syntheses/Control Problem Overview#The Core Challenge](/docs/syntheses-control-problem-overview-the-core-challenge)
+![Syntheses/Control Problem Overview#The Core Challenge](/syntheses-control-problem-overview-the-core-challenge)
 
 ### 2.1 Theoretical Foundations
 
-The [Orthogonality Thesis](/docs/orthogonality-thesis) establishes that...
+The [Orthogonality Thesis](/orthogonality-thesis) establishes that...
 
 ## 3. Approaches
 
 ### 3.1 Corrigibility
 
-![Concepts/Corrigibility#Definition](/docs/concepts-corrigibility-definition)
+![Concepts/Corrigibility#Definition](/concepts-corrigibility-definition)
 
 ### 3.2 Value Learning
 
@@ -326,7 +326,7 @@ description: Survey paper for publication
 
 # Survey Paper Export
 
-[Drafts/Control Problem Survey](/docs/drafts-control-problem-survey)
+[Drafts/Control Problem Survey](/drafts-control-problem-survey)
 ```
 
 Build:
@@ -370,6 +370,6 @@ The compiled paper appears in `Exports/Survey/` with all transclusions resolved.
 
 ## Next Steps
 
-- [Guide - Tutorial Agent Collaboration](/docs/guide/tutorial-agent-collaboration) - Get AI help
-- [Module - Mesh](/docs/modules/mesh) - Deep dive into notes
-- [Module - Exports](/docs/modules/exports) - Export options
+- [Guide - Tutorial Agent Collaboration](/guide/tutorial-agent-collaboration) - Get AI help
+- [Module - Mesh](/modules/mesh) - Deep dive into notes
+- [Module - Exports](/modules/exports) - Export options
